manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week-9-1021-service
  namespace: group-3
  labels:
    app: tcc-nodejs-service
spec:
  selector:
    app: tcc-nodejs-deployment
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
status:
  loadBalancer: {}
