manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: week-9-1021-ingress
  labels:
    app: tcc-nodejs-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  namespace: group-3
spec:
  ingressClassName: nginx
  rules:
    - host: tcc-02.th1.proen.cloud
      http:
        paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: week-9-1021-service
              port:
                number: 3000
